--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,33 @@
-
-
 body {
-    margin: 0;
-    padding: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-      sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-  
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  padding: 200px 0 0;
+  width: 270px;
+  height: 250px;
+  float: left;
+}
+.btn {
+  color: black;
+  margin: 5px;
+  border-radius: 7%;
+  border-color: #ccc;
+}
+
+.calculator {
+  background-color: #bcc;
+  border: 1px solid black;
+
+  width: 200px;
+  height: 200px;
+  float: left;
+}
